improve some UI in module 02
